Updated REPP API for new registrar portal

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -101,6 +101,11 @@ en:
           attributes:
             value:
               taken: 'Status already exists on this domain'
+        
+        invoice:
+          attributes:
+            base:
+              invoice_status_prohibits_operation: 'Invoice status prohibits operation'
 
         user:
           attributes:
